Fixed alignment of arrows in Chrome

--- a/src/styles/search-results.css
+++ b/src/styles/search-results.css
@@ -7,20 +7,16 @@
 }
 
 .exterior-sort-box {
-  position: absolute;
-  width: 15px;
-  height: 30px;
+  display: inline-block;
+  vertical-align: middle;
   margin: 0;
   padding: 0;
   padding-left: 0.2em;
 }
 
 .sort-arrow {
-  width: 15px;
-  height: 30px;
   display: flex;
   flex-direction: column;
-  vertical-align: middle;
   padding: 0;
   margin: 0;
   padding-bottom: 0.2em;
